LatinIME: show emoji key when language switch key is not shown
* Keep it hidden when language switch is visible
  since there is no room for more keys.
* Make the emoji key look like other keys.
* Remove the additional emoji key from enter and
  more keys menu.

Change-Id: I45bc72d833e2737b40bbfeac1bf175b8ebab2b7b

--- a/java/res/xml/key_styles_enter.xml
+++ b/java/res/xml/key_styles_enter.xml
@@ -263,7 +263,7 @@
         >
             <key-style
                 latin:styleName="enterKeyStyle"
-                latin:parentStyle="emojiKeyStyle" />
+                latin:parentStyle="emojiKeyStylePopup" />
         </case>
         <case
             latin:imeAction="actionGo"
